[build-system]
requires = [
    "setuptools>=65.5.0",
    "wheel>=0.41.0",
    "cmake>=3.15",
    "ninja",
]
build-backend = "setuptools.build_meta"

[project]
name = "rag-proto"
version = "0.1.0"
description = "RAG Prototype with MultiLingual Support"
requires-python = ">=3.10,<3.11"
dependencies = [
    "PyMuPDF==1.22.3",
    "faiss-cpu==1.7.4",
    "sentence-transformers==2.2.2",
    "langdetect==1.0.9",
    "groq==0.1.2",
    "pytesseract==0.3.10",
    "Pillow==9.4.0",
    "deep-translator==1.8.3",
    "numpy==1.23.5",
    "streamlit==1.29.0",
    "SpeechRecognition==3.8.1",
    "requests==2.31.0",
    "streamlit-lottie==0.0.3",
    "python-multipart==0.0.6",
]

[tool.setuptools]
packages = []
